--- a/Dartboard.GUI/App.xaml
+++ b/Dartboard.GUI/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="Dartboard.Gui.App"
+﻿<Application x:Class="DART.Dartboard.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Dartboard.Gui"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
