--- a/Dartboard.GUI/MainWindow.xaml
+++ b/Dartboard.GUI/MainWindow.xaml
@@ -16,10 +16,53 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="650"></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Orientation="Vertical">
+
+            <Grid Margin="15" Height="300">
+                <Grid.Effect>
+                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
+                </Grid.Effect>
+                <Grid.OpacityMask>
+                    <VisualBrush Visual="{Binding ElementName=Border0}" />
+                </Grid.OpacityMask>
+                <Grid.Resources>
+                    <Style TargetType="lvc:LineSeries">
+                        <Setter Property="StrokeThickness" Value="3"></Setter>
+                        <Setter Property="Stroke" Value="White"></Setter>
+                        <Setter Property="Fill" Value="#4EFFFFFF"></Setter>
+                        <Setter Property="PointGeometrySize" Value="0"></Setter>
+                        <Setter Property="LineSmoothness" Value="0"></Setter>
+                    </Style>
+                    <Style TargetType="lvc:Axis">
+                        <Setter Property="ShowLabels" Value="False"></Setter>
+                        <Setter Property="IsEnabled" Value="False"></Setter>
+                    </Style>
+                </Grid.Resources>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height=".60*"></RowDefinition>
+                    <RowDefinition Height=".4*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Border x:Name="Border0" Grid.Row="0" Grid.RowSpan="4" CornerRadius="5" Background="White" />
+                <Border Grid.Row="0" Grid.RowSpan="3" Background="#C2185B" ></Border>
+                <TextBlock Grid.Row="0" TextAlignment="Center" Padding="10, 10, 0, 5" Foreground="White" FontSize="18">
+                    Temperature
+                </TextBlock>
+                <lvc:CartesianChart Grid.Row="2" Margin="0, 0, 0, 0" Series="{Binding LastHourSeries}" Hoverable="False" DataTooltip="{x:Null}">
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis MinValue="2"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
+                </lvc:CartesianChart>
+                <StackPanel Grid.Row="3" VerticalAlignment="Center" Margin="25, 5, 25, 0">
+                    <TextBlock Opacity=".4" FontSize="13">Current Temperature</TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Foreground="#303030" FontSize="18" VerticalAlignment="Bottom" Margin="8, 6">100°C</TextBlock>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
 
             <Grid Margin="15" Height="300">
                 <Grid.Effect>
@@ -48,50 +91,6 @@
                     <RowDefinition Height=".4*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Border x:Name="Border1" Grid.Row="0" Grid.RowSpan="4" CornerRadius="5" Background="White" />
-                <Border Grid.Row="0" Grid.RowSpan="3" Background="#C2185B" ></Border>
-                <TextBlock Grid.Row="0" TextAlignment="Center" Padding="10, 10, 0, 5" Foreground="White" FontSize="18">
-                    Temperature
-                </TextBlock>
-                <lvc:CartesianChart Grid.Row="2" Margin="0, 0, 0, 0" Series="{Binding LastHourSeries}" Hoverable="False" DataTooltip="{x:Null}">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis MinValue="2"></lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
-                </lvc:CartesianChart>
-                <StackPanel Grid.Row="3" VerticalAlignment="Center" Margin="25, 5, 25, 0">
-                    <TextBlock Opacity=".4" FontSize="13">Current Temperature</TextBlock>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Foreground="#303030" FontSize="18" VerticalAlignment="Bottom" Margin="8, 6">100°C</TextBlock>
-                    </StackPanel>
-                </StackPanel>
-            </Grid>
-
-            <Grid Margin="15" Height="300">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border_G2}" />
-                </Grid.OpacityMask>
-                <Grid.Resources>
-                    <Style TargetType="lvc:LineSeries">
-                        <Setter Property="StrokeThickness" Value="3"></Setter>
-                        <Setter Property="Stroke" Value="White"></Setter>
-                        <Setter Property="Fill" Value="#4EFFFFFF"></Setter>
-                        <Setter Property="PointGeometrySize" Value="0"></Setter>
-                        <Setter Property="LineSmoothness" Value="0"></Setter>
-                    </Style>
-                    <Style TargetType="lvc:Axis">
-                        <Setter Property="ShowLabels" Value="False"></Setter>
-                        <Setter Property="IsEnabled" Value="False"></Setter>
-                    </Style>
-                </Grid.Resources>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height=".60*"></RowDefinition>
-                    <RowDefinition Height=".4*"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Border x:Name="Border_G2" Grid.Row="0" Grid.RowSpan="4" CornerRadius="5" Background="White" />
                 <Border Grid.Row="0" Grid.RowSpan="3" Background="#388E3C" ></Border>
                 <TextBlock Grid.Row="0" TextAlignment="Center" Padding="10, 10, 0, 5" Foreground="White" FontSize="18">
                     Barometric Pressure
@@ -114,9 +113,9 @@
                     <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
                 </Grid.Effect>
                 <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border_G3}" />
+                    <VisualBrush Visual="{Binding ElementName=Border2}" />
                 </Grid.OpacityMask>
-                <Border x:Name="Border_G3" Grid.Row="0" CornerRadius="5" Background="White" />
+                <Border x:Name="Border2" Grid.Row="0" CornerRadius="5" Background="White" />
 
             </Grid>
 
@@ -127,9 +126,9 @@
                 <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
             </Grid.Effect>
             <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border_2}" />
+                <VisualBrush Visual="{Binding ElementName=Border3}" />
             </Grid.OpacityMask>
-            <Border x:Name="Border_2" Grid.Row="0"  CornerRadius="5" Background="White" />
+            <Border x:Name="Border3" Grid.Row="0"  CornerRadius="5" Background="White" />
 
             <Controls:MjpegStream x:Name="PrimaryStream" Background="#9E9E9E"/>
         </Grid>
@@ -140,9 +139,9 @@
                     <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
                 </Grid.Effect>
                 <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border_3}" />
+                    <VisualBrush Visual="{Binding ElementName=Border4}" />
                 </Grid.OpacityMask>
-                <Border x:Name="Border_3" Grid.Row="0"  CornerRadius="5" Background="White" />
+                <Border x:Name="Border4" Grid.Row="0"  CornerRadius="5" Background="White" />
 
                 <Controls:MjpegStream x:Name="SecondaryStream" Background="#9E9E9E"/>
             </Grid>
@@ -152,10 +151,14 @@
                     <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
                 </Grid.Effect>
                 <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border_4}" />
+                    <VisualBrush Visual="{Binding ElementName=Border5}" />
                 </Grid.OpacityMask>
-                <Border x:Name="Border_4" Grid.Row="0"  CornerRadius="5" Background="White" />
-
+                <Border x:Name="Border5" Grid.Row="0"  CornerRadius="5" Background="#0288D1" />
+                <Controls:HIDDisplay x:Name="HidDisplay" BorderBrush="Black" Foreground="#FFA000" GuageBackground="White">
+                    <Controls:HIDDisplay.Effect>
+                        <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
+                    </Controls:HIDDisplay.Effect>
+                </Controls:HIDDisplay>
             </Grid>
         </StackPanel>
 
@@ -164,11 +167,11 @@
                 <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
             </Grid.Effect>
             <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border_5}" />
+                <VisualBrush Visual="{Binding ElementName=Border6}" />
             </Grid.OpacityMask>
-            <Border x:Name="Border_5" Grid.Row="0"  CornerRadius="5" Background="White" />
+            <Border x:Name="Border6" Grid.Row="0"  CornerRadius="5" Background="White" />
 
-            <TextBox HorizontalAlignment="Left" Height="300" Width="927" IsReadOnly="True" TextWrapping="NoWrap" Text="TextBox" VerticalAlignment="Top"  Background="#FF212121" Foreground="#FFFAFAFA" BorderBrush="{x:Null}" FontFamily="Lucida Console" FontSize="16" SelectionBrush="{x:Null}"/>
+            <TextBox Name="ConsoleOutput" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="300" Width="927" IsReadOnly="True" TextWrapping="NoWrap" Text="TextBox" VerticalAlignment="Top"  Background="#FF212121" Foreground="#FFFAFAFA" BorderBrush="{x:Null}" FontFamily="Lucida Console" FontSize="16" SelectionBrush="{x:Null}"/>
 
 
         </Grid>
@@ -178,22 +181,10 @@
                 <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
             </Grid.Effect>
             <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border_6}" />
+                <VisualBrush Visual="{Binding ElementName=Border7}" />
             </Grid.OpacityMask>
-            <Border x:Name="Border_6" Grid.Row="0"  CornerRadius="5" Background="White" />
+            <Border x:Name="Border7" Grid.Row="0"  CornerRadius="5" Background="White" />
 
         </Grid>
-
-
-
-        <!--<Border BorderBrush="#757575" Background="#BDBDBD" Grid.Column="1" BorderThickness="5" Width="1148" Height="646" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="0,50,0,0">
-            <Controls:MjpegStream x:Name="PrimaryStream"/>
-        </Border>
-        
-        <Border BorderBrush="#757575" Background="#BDBDBD" BorderThickness="5" Width="469" Height="266" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="0,740,0,0">
-            <Controls:MjpegStream x:Name="SecondaryStream"/>
-        </Border>-->
-        
     </Grid>
-
 </Window>
