--- a/Dartboard.GUI/MainWindow.xaml
+++ b/Dartboard.GUI/MainWindow.xaml
@@ -4,187 +4,50 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:control3D="clr-namespace:Simulator.Control3D;assembly=Simulator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1080" Width="1920" Background="#E9E9E9" ResizeMode="NoResize">
+        Title="MainWindow" Height="985.834" Width="1289.333" Background="#E9E9E9" ResizeMode="NoResize">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="574"></ColumnDefinition>
-            <ColumnDefinition Width="574"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="650"></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-
-        <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Orientation="Vertical">
-
-            <Grid Margin="15" Height="300">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border0}" />
-                </Grid.OpacityMask>
-                <Grid.Resources>
-                    <Style TargetType="lvc:LineSeries">
-                        <Setter Property="StrokeThickness" Value="3"></Setter>
-                        <Setter Property="Stroke" Value="White"></Setter>
-                        <Setter Property="Fill" Value="#4EFFFFFF"></Setter>
-                        <Setter Property="PointGeometrySize" Value="0"></Setter>
-                        <Setter Property="LineSmoothness" Value="0"></Setter>
-                    </Style>
-                    <Style TargetType="lvc:Axis">
-                        <Setter Property="ShowLabels" Value="False"></Setter>
-                        <Setter Property="IsEnabled" Value="False"></Setter>
-                    </Style>
-                </Grid.Resources>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height=".60*"></RowDefinition>
-                    <RowDefinition Height=".4*"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Border x:Name="Border0" Grid.Row="0" Grid.RowSpan="4" CornerRadius="5" Background="White" />
-                <Border Grid.Row="0" Grid.RowSpan="3" Background="#C2185B" ></Border>
-                <TextBlock Grid.Row="0" TextAlignment="Center" Padding="10, 10, 0, 5" Foreground="White" FontSize="18">
-                    Temperature
-                </TextBlock>
-                <lvc:CartesianChart Grid.Row="2" Margin="0, 0, 0, 0" Series="{Binding LastHourSeries}" Hoverable="False" DataTooltip="{x:Null}">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis MinValue="2"></lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
-                </lvc:CartesianChart>
-                <StackPanel Grid.Row="3" VerticalAlignment="Center" Margin="25, 5, 25, 0">
-                    <TextBlock Opacity=".4" FontSize="13">Current Temperature</TextBlock>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Foreground="#303030" FontSize="18" VerticalAlignment="Bottom" Margin="8, 6">100°C</TextBlock>
-                    </StackPanel>
-                </StackPanel>
-            </Grid>
-
-            <Grid Margin="15" Height="300">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border1}" />
-                </Grid.OpacityMask>
-                <Grid.Resources>
-                    <Style TargetType="lvc:LineSeries">
-                        <Setter Property="StrokeThickness" Value="3"></Setter>
-                        <Setter Property="Stroke" Value="White"></Setter>
-                        <Setter Property="Fill" Value="#4EFFFFFF"></Setter>
-                        <Setter Property="PointGeometrySize" Value="0"></Setter>
-                        <Setter Property="LineSmoothness" Value="0"></Setter>
-                    </Style>
-                    <Style TargetType="lvc:Axis">
-                        <Setter Property="ShowLabels" Value="False"></Setter>
-                        <Setter Property="IsEnabled" Value="False"></Setter>
-                    </Style>
-                </Grid.Resources>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height=".60*"></RowDefinition>
-                    <RowDefinition Height=".4*"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Border x:Name="Border1" Grid.Row="0" Grid.RowSpan="4" CornerRadius="5" Background="White" />
-                <Border Grid.Row="0" Grid.RowSpan="3" Background="#388E3C" ></Border>
-                <TextBlock Grid.Row="0" TextAlignment="Center" Padding="10, 10, 0, 5" Foreground="White" FontSize="18">
-                    Barometric Pressure
-                </TextBlock>
-                <lvc:CartesianChart Grid.Row="2" Margin="0, 0, 0, 0" Series="{Binding LastHourSeries}" Hoverable="False" DataTooltip="{x:Null}">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis MinValue="2"></lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
-                </lvc:CartesianChart>
-                <StackPanel Grid.Row="3" VerticalAlignment="Center" Margin="25, 0">
-                    <TextBlock Opacity=".4" FontSize="13">Current Barometric Pressure</TextBlock>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Foreground="#303030" FontSize="18" VerticalAlignment="Bottom" Margin="8, 6">15 mBar</TextBlock>
-                    </StackPanel>
-                </StackPanel>
-            </Grid>
-
-            <Grid Margin="15" Height="300">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border2}" />
-                </Grid.OpacityMask>
-                <Border x:Name="Border2" Grid.Row="0" CornerRadius="5" Background="White" />
-
-            </Grid>
-
-        </StackPanel>
-
-        <Grid VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="0" Margin="15" Grid.RowSpan="2" Height="629">
-            <Grid.Effect>
-                <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-            </Grid.Effect>
-            <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border3}" />
-            </Grid.OpacityMask>
-            <Border x:Name="Border3" Grid.Row="0"  CornerRadius="5" Background="White" />
-
-            <Controls:MjpegStream x:Name="PrimaryStream" Background="#9E9E9E"/>
-        </Grid>
-
-        <StackPanel Grid.Row="0" Grid.Column="3" Grid.RowSpan="2">
-            <Grid VerticalAlignment="Top" Margin="15" Height="200">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border4}" />
-                </Grid.OpacityMask>
-                <Border x:Name="Border4" Grid.Row="0"  CornerRadius="5" Background="White" />
-
-                <Controls:MjpegStream x:Name="SecondaryStream" Background="#9E9E9E"/>
-            </Grid>
-
-            <Grid VerticalAlignment="Top" Margin="15" Height="400">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                </Grid.Effect>
-                <Grid.OpacityMask>
-                    <VisualBrush Visual="{Binding ElementName=Border5}" />
-                </Grid.OpacityMask>
-                <Border x:Name="Border5" Grid.Row="0"  CornerRadius="5" Background="#0288D1" />
-                <Controls:HIDDisplay x:Name="HidDisplay" BorderBrush="Black" Foreground="#FFA000" GuageBackground="White">
-                    <Controls:HIDDisplay.Effect>
+        <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Horizontal">
+                <Grid VerticalAlignment="Top" Margin="15" Height="450" Width="400">
+                    <Border x:Name="Border5" Grid.Row="0"  CornerRadius="5" Background="#0288D1" />
+                    <Controls:HIDDisplay x:Name="HidDisplay" BorderBrush="Black" Foreground="#FFA000" GuageBackground="White">
+                        <Controls:HIDDisplay.Effect>
+                            <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
+                        </Controls:HIDDisplay.Effect>
+                    </Controls:HIDDisplay>
+                </Grid>
+                <Grid VerticalAlignment="Top" Margin="15">
+                    <control3D:VirtualRobot x:Name="virtualRobot" Height="450" Width="800">
+                        <control3D:VirtualRobot.Effect>
+                            <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
+                        </control3D:VirtualRobot.Effect>
+                    </control3D:VirtualRobot>
+                </Grid>
+            </StackPanel>
+            <Grid VerticalAlignment="Top" Margin="15">
+                <TextBox Name="ConsoleOutput" 
+                         HorizontalScrollBarVisibility="Auto" 
+                         VerticalScrollBarVisibility="Visible" 
+                         HorizontalAlignment="Left"
+                         Height="450" 
+                         Width="1250" 
+                         IsReadOnly="True" 
+                         TextWrapping="NoWrap" 
+                         Text="TextBox" 
+                         VerticalAlignment="Top"  
+                         Background="#FF212121" 
+                         Foreground="#FFFAFAFA" 
+                         BorderBrush="{x:Null}" 
+                         FontFamily="Lucida Console" 
+                         FontSize="16" 
+                         SelectionBrush="{x:Null}">
+                    <TextBox.Effect>
                         <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-                    </Controls:HIDDisplay.Effect>
-                </Controls:HIDDisplay>
+                    </TextBox.Effect>
+                </TextBox>
             </Grid>
         </StackPanel>
-
-        <Grid Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Top" Margin="15,25,15,15" Height="300">
-            <Grid.Effect>
-                <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-            </Grid.Effect>
-            <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border6}" />
-            </Grid.OpacityMask>
-            <Border x:Name="Border6" Grid.Row="0"  CornerRadius="5" Background="White" />
-
-            <TextBox Name="ConsoleOutput" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="300" Width="927" IsReadOnly="True" TextWrapping="NoWrap" Text="TextBox" VerticalAlignment="Top"  Background="#FF212121" Foreground="#FFFAFAFA" BorderBrush="{x:Null}" FontFamily="Lucida Console" FontSize="16" SelectionBrush="{x:Null}"/>
-
-
-        </Grid>
-
-        <Grid Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="15,25,15,15" Height="300">
-            <Grid.Effect>
-                <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" Opacity=".2" ShadowDepth="1"/>
-            </Grid.Effect>
-            <Grid.OpacityMask>
-                <VisualBrush Visual="{Binding ElementName=Border7}" />
-            </Grid.OpacityMask>
-            <Border x:Name="Border7" Grid.Row="0"  CornerRadius="5" Background="White" />
-
-        </Grid>
     </Grid>
 </Window>
