--- a/Dartboard.GUI/MainWindow.xaml
+++ b/Dartboard.GUI/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window xmlns:Controls="clr-namespace:DART.Dartboard.GUI.Controls"  x:Class="DART.Dartboard.GUI.MainWindow"
+﻿<Window xmlns:Controls="clr-namespace:DART.Dartboard.GUI.Controls" 
+        x:Class="DART.Dartboard.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
